test/files/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
c2ca32f8eea54ff22a37d2c8a6ac1a6c5bb3e4ea ?plugins.jar
